--- a/echo.html
+++ b/echo.html
@@ -14,7 +14,7 @@
             border-radius: 4px;
         }
 
-        #echo {
+        .echo-list {
             padding: 9px 34px;
             border: 1px solid #e1e1e8;
             border-radius: 4px;
@@ -53,9 +53,37 @@
         </form>
 
         <h4>
-            Items sent to the server will be echoed below.
+            Items sent to the server will be listed below.
         </h4>
-        <ul id="echo"></ul>
+        <ul id="sent" class="echo-list"></ul>
+
+        <h4>
+            Items echoed back from the server will be listed below.
+        </h4>
+        <ul id="echo" class="echo-list"></ul>
+    </section>
+
+    <section>
+        <h4>
+            Once WebSockHop is connected, use this form to send an object to the server.
+        </h4>
+        <form id="testForm2">
+            <div class="form-group">
+                <label for="toSend">Text to send</label>
+                <input type="text" id="toSend2" class="form-control" />
+            </div>
+            <button id="sendButton2" class="btn btn-primary">Send</button>
+        </form>
+
+        <h4>
+            Objects sent to the server will be listed below.
+        </h4>
+        <ul id="sent2" class="echo-list"></ul>
+
+        <h4>
+            Objects echoed back from the server will be listed below.
+        </h4>
+        <ul id="echo2" class="echo-list"></ul>
     </section>
 
 </div>
@@ -81,6 +109,15 @@
         var STATE_WAITING_TO_RETRY = 4;
 
         var state = STATE_NO_SOCKET;
+
+        var addMessageToList = function(selector, obj) {
+            var message = JSON.stringify(obj);
+            console.log('echo: adding message ' + message + ' to list at selector ' + selector);
+            var echo = document.querySelector(selector);
+            var messageNode = document.createElement("li");
+            messageNode.innerHTML = escapeHTML(message);
+            echo.appendChild(messageNode);
+        };
 
         var switchButton = document.querySelector("#switch");
         switchButton.addEventListener("click", function() {
@@ -141,12 +178,8 @@
                     updateUi();
                 });
 
-                ws.on('message', function(message) {
-                    console.log('echo: adding message ' + message + ' to list');
-                    var echo = document.querySelector("#echo");
-                    var messageNode = document.createElement("li");
-                    messageNode.innerHTML = escapeHTML(message);
-                    echo.appendChild(messageNode);
+                ws.on('message', function(obj) {
+                    addMessageToList("#echo", obj);
                 });
                 break;
 
@@ -181,7 +214,32 @@
                 var toSend = document.querySelector("#toSend");
                 var valueToSend = toSend.value.trim();
                 if (valueToSend.length) {
-                    ws.send(toSend.value);
+                    addMessageToList("#sent", valueToSend);
+                    ws.send(valueToSend);
+                    toSend.value = "";
+                }
+            } else {
+                console.log("echo: not connected, doing nothing.");
+            }
+
+            event.preventDefault();
+        });
+
+        var form = document.querySelector("#testForm2");
+        form.addEventListener("submit", function(event) {
+
+            console.log("echo: form 2 submitted");
+
+            if (state == STATE_CONNECTED) {
+                var toSend = document.querySelector("#toSend2");
+                var valueToSend = toSend.value.trim();
+                if (valueToSend.length) {
+                    var obj = { type: 'echo-obj', value: valueToSend };
+                    console.log("echo: creating object: " + JSON.stringify(obj));
+                    addMessageToList("#sent2", obj);
+                    ws.request(obj, function(requestObj) {
+                        addMessageToList("#echo2", requestObj);
+                    });
                     toSend.value = "";
                 }
             } else {
@@ -193,6 +251,7 @@
 
         var status = document.querySelector("#status");
         var sendButton = document.querySelector("#sendButton");
+        var sendButton2 = document.querySelector("#sendButton2");
 
         var updateUi = function() {
 
@@ -201,26 +260,31 @@
                 status.innerHTML = "WebSockHop is not initialized.";
                 switchButton.innerHTML = "Connect";
                 sendButton.disabled = true;
+                sendButton2.disabled = true;
                 break;
             case STATE_WAITING_TO_OPEN:
                 status.innerHTML = "WebSockHop is waiting to open.";
                 switchButton.innerHTML = "Cancel";
                 sendButton.disabled = true;
+                sendButton2.disabled = true;
                 break;
             case STATE_WAITING_TO_CONNECT:
                 status.innerHTML = "WebSockHop is initialized, now connecting ...";
                 switchButton.innerHTML = "Abort connect";
                 sendButton.disabled = true;
+                sendButton2.disabled = true;
                 break;
             case STATE_CONNECTED:
                 status.innerHTML = "WebSockHop is initialized and connected.";
                 switchButton.innerHTML = "Disconnect";
                 sendButton.disabled = false;
+                sendButton2.disabled = false;
                 break;
             case STATE_WAITING_TO_RETRY:
                 status.innerHTML = "WebSockHop is waiting to reconnect ...";
                 switchButton.innerHTML = "Abort reconnect";
                 sendButton.disabled = true;
+                sendButton2.disabled = true;
                 break;
             }
 
