Ping the server at interval (reset on msg received)

--- a/echo.html
+++ b/echo.html
@@ -127,6 +127,7 @@
             switch(state) {
             case STATE_NO_SOCKET:
                 ws = new WebSockHop("wss://echo.websocket.org/");
+                ws.pingIntervalMsecs = 60000; // Change this to experiment with ping interval
                 ws.on('opening', function() {
                     console.log('echo: socket opening');
                     // It's possible to do something asynchronous here
