Code updated to ES2015, modularized, and released for npm Added support for custom WebSocket create function Removed code to disable Esc on Firefox since that behavior has been gone for a while
Bumped version to 1.1.x

--- a/echo.html
+++ b/echo.html
@@ -111,7 +111,7 @@
 
 </div>
 
-<script src="./websockhop.js"></script>
+<script src="./dist/websockhop.js"></script>
 
 <script>
     (function() {
