Initial commit of example with own package.json and index.html with added scripts to support polyfills

--- a/examples/echo/index.html
+++ b/examples/echo/index.html
@@ -111,7 +111,9 @@
 
 </div>
 
-<script src="./dist/websockhop.js"></script>
+<script src="//cdn.jsdelivr.net/sockjs/1/sockjs.min.js"></script>
+<script src="./node_modules/engine.io-as-websocket/dist/engine.io-as-websocket.min.js"></script>
+<script src="./node_modules/dist/websockhop.js"></script>
 
 <script>
     (function() {
